--- a/pages/store.html
+++ b/pages/store.html
@@ -67,7 +67,7 @@
         <a href="cart.html">
             <div class="flex items-center gap-2">
                 <img src="/assets/icons/bolsa.png" alt="" class="w-6 h-6">
-                <div id="counterTop" class="w-6 h-6 rounded-full flex justify-center items-center bg-grey text-xs hidden">0</div>
+                <div id="counterTop" class="w-6 h-6 rounded-full justify-center flex items-center bg-grey text-xs hidden">0</div>
             </div>
         </a>
     </nav>
@@ -77,7 +77,7 @@
         <h2 class="text-2xl font-medium text-green text-center">Últimos orígenes</h2>
         <div class="flex justify-center items-center flex-wrap gap-6">
             <article
-                class="coffe group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe">
+                class="coffe group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe transition-colors duration-500">
                 <img src="../assets/coffe/costaRicaBag.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Costa Rica Tarrazú</p>
@@ -87,7 +87,7 @@
                     class=" p-2 font-semibold rounded bg-green opacity-70 group-hover:opacity-100 text-sm text-white">Añadir</button>
             </article>
             <article
-                class="coffe group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe">
+                class="coffe group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe transition-colors duration-500">
                 <img src="../assets/coffe/colombiaBag.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Colombia Los Naranjos</p>
@@ -97,7 +97,7 @@
                     class=" p-2 font-semibold rounded bg-green opacity-70 group-hover:opacity-100 text-sm text-white">Añadir</button>
             </article>
             <article
-                class="coffe group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe">
+                class="coffe group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe transition-colors duration-500">
                 <img src="../assets/coffe/laosBag.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Laos Amanecer</p>
@@ -107,7 +107,7 @@
                     class=" p-2 font-semibold rounded bg-green opacity-70 group-hover:opacity-100 text-sm text-white">Añadir</button>
             </article>
             <article
-                class="coffe group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe">
+                class="coffe group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe transition-colors duration-500">
                 <img src="../assets/coffe/etiopiaBag.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Etiopía Yrgacheff</p>
@@ -117,7 +117,7 @@
                     class=" p-2 font-semibold rounded bg-green opacity-70 group-hover:opacity-100 text-sm text-white">Añadir</button>
             </article>
             <article
-                class="coffe group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe">
+                class="coffe group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe transition-colors duration-500">
                 <img src="../assets/coffe/Kenia-Nd.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Kenia Ndunduri</p>
@@ -127,7 +127,7 @@
                     class=" p-2 font-semibold rounded bg-green opacity-70 group-hover:opacity-100 text-sm text-white">Añadir</button>
             </article>
             <article
-                class="coffe group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe">
+                class="coffe group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe transition-colors duration-500">
                 <img src="../assets/coffe/EtiopiaSidoma.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Etiopía Sidamo</p>
@@ -137,7 +137,7 @@
                     class=" p-2 font-semibold rounded bg-green opacity-70 group-hover:opacity-100 text-sm text-white">Añadir</button>
             </article>
             <article
-                class="coffe group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe">
+                class="coffe group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe transition-colors duration-500">
                 <img src="../assets/coffe/CostaRicaMonteBello.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Costa Rica Monte Bello</p>
@@ -147,14 +147,14 @@
                     class=" p-2 font-semibold rounded bg-green opacity-70 group-hover:opacity-100 text-sm text-white">Añadir</button>
             </article>
             <article
-                class="coffe group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe">
+                class="coffe group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md opacity-60">
                 <img src="../assets/coffe/colombiaBag.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Colombia La Casita</p>
                     <p class="font-normal"><span>9</span>,00€</p>
                 </div>
                 <button
-                    class=" p-2 font-semibold rounded bg-green opacity-70 group-hover:opacity-100 text-sm text-white">Añadir</button>
+                    class=" p-2 font-semibold rounded bg-taupe text-sm text-white cursor-default">Agotado</button>
             </article>
         </div>
     </section>
@@ -190,24 +190,26 @@
     <!-- -----------------THREE CARD-------------- -->
     <!-- -----------------FOOTER-------------- -->
     <footer class="flex flex-col bg-black text-white py-7 px-10">
-        <div class="footer-1 flex justify-start items-center gap-2 mb-2.5 text-white">
+        <div class="footer-1 flex  items-center gap-2 mb-2.5 text-white">
             <h2 class="text-2xl ">cafedealtura.com</h2>
             <img src="/assets/icons/cup.png" alt="cup" class="coffe-cup">
         </div>
-        <div class="flex mb-4 gap-[570px]">
-            <div class="">
+        <!-- <div class="flex mb-4 gap-[570px]"> -->
+        <div class="flex w-full ">
+            <div class="w-1/2">
                 <p id="size18" class="text-lg mb-5">Te ayudamos en</p>
                 <button class="flex items-center py-4 px-6 gap-2.5 bg-grey text-white rounded border-none mb-5">
                     <img src="../assets/icons/wPhone.png" alt="">
                     +34 919 49 05 18
                 </button>
-                <button class="flex items-center py-4 px-6 gap-2.5 bg-grey text-white rounded border-none ">
+                <button class="flex items-center py-4 px-6 gap-2.5 bg-grey text-white rounded border-none mb-5">
                     <img src="../assets/icons/whiteMail.png" alt="" id="mail-img">
                     hola@cafedealtura.com
                 </button>
             </div>
-            <div class="footer-link flex gap-[118px] justify-between">
-                <div class="footer-link-actual flex flex-col gap-4">
+
+            <div class="footer-link flex gap-[118px] w-1/2">
+                <div class="flex flex-col gap-4">
                     <a href="" class="font-semibold text-sm">Tienda</a>
                     <a href="" class="font-semibold text-sm">Suscripción</a>
                     <a href="" class="font-semibold text-sm">Para empresas</a>
@@ -215,12 +217,13 @@
                     <a href="" class="font-semibold text-sm">Contacto</a>
 
                 </div>
-                <div class="footer-link-actual flex flex-col gap-4">
-                    <a href="">Política de privacidad</a>
-                    <a href="">Política de cookies</a>
-                    <a href="">Términos y condiciones</a>
+                <div class="flex flex-col gap-4">
+                    <a href="" class="font-semibold text-sm">Política de privacidad</a>
+                    <a href="" class="font-semibold text-sm">Política de cookies</a>
+                    <a href="" class="font-semibold text-sm">Términos y condiciones</a>
                 </div>
             </div>
+        </div>
         </div>
     </footer>
     <section class="footer-last flex justify-center font-semibold bg-darkGrey py-3 text-white">
